syntax = "proto3";

package api;

option go_package = "balancer/api";

service User{
    rpc  getUser(GetUserRequest) returns (UserInfo){}
    rpc  getUsers (Empty) returns (GetUsersResponse){}
    rpc  createUser (UserInfo) returns (Empty){}
}

message GetUserRequest{
    int32 id = 1;
}

message Empty {}

message UserInfo {
    int32 id = 1;
    string key = 2;
    string first_name = 3;
    string last_name = 4;
    string city = 5;
}

message GetUsersResponse {
   repeated UserInfo UsersInfo = 1;
}


